# mineru-sdk-rs

./: .rumdl.toml  Cargo.toml  Justfile  README.md  context7.json
.github/: copilot-instructions.md
crates/mineru-sdk/: Cargo.toml
crates/mineru-sdk/src/: client.rs  error.rs  lib.rs  types.rs
docs/: mineru_api.md  openapi.json
