[workspace]
members = ["bin/*", "crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = "4.5.53"
config = "0.15.19"
eyre = "0.6.12"
hpx = "0.1.3"
leptos = "0.8.15"
serde = "1.0.228"
serde_json = "1.0.148"
shadow-rs = "1.5.0"
singlestage = "0.4.0"
sqlx = "0.9.0-alpha.1"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.44"
